# feed-archiver

./: .cz.toml  .dir-locals.el.in  .env.in  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  CONTRIBUTING.rst  Dockerfile  Dockerfile.devel  Makefile  NEWS-VERSION.rst  NEWS.rst  README.rst  TODO.rst  docker-compose-servarr.yml  docker-compose.override.yml  docker-compose.yml  link-fallbacks.feature.rst  pyproject.toml  requirements-devel.txt  requirements.txt  setup.cfg  towncrier.toml  tox.ini
.github/workflows/: build-test-release.yml  build-test.yml  ci-cd.yml  release.yml
.reuse/: dep5
build-host/: Dockerfile  Makefile
newsfragments/: +py37-compat.bugfix.rst
nginx/templates/: default.conf.template
requirements/py310/: build.txt  devel.txt  test.txt  user.txt
requirements/py311/: build.txt  devel.txt  test.txt  user.txt
requirements/py37/: build.txt  devel.txt  test.txt  user.txt
requirements/py38/: build.txt  devel.txt  test.txt  user.txt
requirements/py39/: build.txt  devel.txt  test.txt  user.txt
server/: docker-compose.yml
src/feedarchiver/: __init__.py  __main__.py  archive.py  feed.py  fixmimes.py  formats.py  utils.py
src/feedarchiver/enclosures/: __init__.py  servarr.py  template.py
src/feedarchiver/linkpaths/: __init__.py  servarr.py  template.py
src/feedarchiver/newsfragments/: +upgrade-requirements.bugfix.rst  archive-feed-parse-errors.bugfix.rst  archive-index.feature.rst  ci-cd-from-template.misc.rst  ci-cd-publish-releases.bugfix.rst  correct-versions.bugfix.rst  download-path-output.bugfix.rst  empty-results.bugfix.rst  enclosure-plugin-rename.feature.rst  enclosure-term.feature.rst  feed-backups.bugfix.rst  link-duplicates.bugfix.rst  link-quote-path-sep.feature.rst  link-rich-parser.feature.rst  migrate-sub-command.removal.rst  re-group-names.feature.rst  relink-item-content.feature.rst  request-timeouts.fix.rst  template-url-path.feature.rst  wrong-archive-feed-format-check.bugfix.rst
src/feedarchiver/tests/: __init__.py  test_archive.py  test_cli.py  test_download.py  test_feed.py  test_linking.py  test_migrate.py  test_urls.py
src/feedarchiver/tests/archives/downloads/: .feed-archiver.csv  .feed-archiver.yml
src/feedarchiver/tests/archives/empty/: .gitignore
src/feedarchiver/tests/archives/empty-feeds/: .feed-archiver.yml
src/feedarchiver/tests/archives/empty-items/: .feed-archiver.yml
src/feedarchiver/tests/archives/end-to-end/: .feed-archiver.yml.in
src/feedarchiver/tests/archives/relink/: .feed-archiver.yml
src/feedarchiver/tests/archives/relink-wo-suffix/: .feed-archiver.yml
src/feedarchiver/tests/archives/simple/: .feed-archiver.csv  .feed-archiver.yml
src/feedarchiver/tests/archives/wikipedia-examples/: .feed-archiver.csv
src/feedarchiver/tests/feeds/wikipedia-examples/feeds/: garply-removed-item.rss  waldo-orig.atom
src/feedarchiver/tests/remotes/downloads/orig/http/localhost%3A8989/api/v3/: episode%3Fapikey%3Dsecret%26seriesId%3D7  episode%3Fapikey=secret%26seriesId=7  episodeFile%3Fapikey=secret%26seriesId=7  series%3Fapikey%3Dsecret
src/feedarchiver/tests/remotes/downloads/orig/http/localhost%3A8989/api/v3/series/: 7%3Fapikey=secret
src/feedarchiver/tests/remotes/downloads/orig/https/foo.example.com/podcast/: feed.rss  index.html
src/feedarchiver/tests/remotes/downloads/orig/https/foo.example.com/podcast/episodes/bah-episode-title/: index.html
src/feedarchiver/tests/remotes/downloads/orig/https/foo.example.com/podcast/episodes/fred-episode-title/: download
src/feedarchiver/tests/remotes/downloads/orig/https/foo.example.com/podcast/episodes/waldo-episode-title/: index.html
src/feedarchiver/tests/remotes/empty-items/orig/https/foo.example.com/podcast/: empty.rss
src/feedarchiver/tests/remotes/simple/added-item/http/www.example.com/: main.html
src/feedarchiver/tests/remotes/simple/added-item/https/waldo.example.com/feeds/: waldo
src/feedarchiver/tests/remotes/simple/empty/http/www.example.com/blog/post/: 2
src/feedarchiver/tests/remotes/simple/empty/https/foo-username%3Asecret@grault.example.com/feeds/: garply%3Fbar=qux%252Fbaz#corge.rss
src/feedarchiver/tests/remotes/simple/feeds/: garply-added-item.rss
src/feedarchiver/tests/remotes/simple/orig/https/foo-username%3Asecret@grault.example.com/feeds/: garply%3Fbar=qux%252Fbaz#corge.rss
src/feedarchiver/tests/remotes/simple/removed-item/http/www.example.com/blog/post/: 3
src/feedarchiver/tests/remotes/simple/reordered-item/https/foo-username%3Asecret%40grault.example.com/feeds/: garply.rss%3Fbar%3Dqux%252Fbaz%23corge
