[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html#how-to-use-it
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

# https://github.com/pypa/setuptools_scm#pyprojecttoml-usage
[tool.setuptools_scm]
write_to = "src/feedarchiver/version.py"
local_scheme = "no-local-version"

[tool.pylint]
extension-pkg-allow-list = ["lxml"]
