[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html#how-to-use-it
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

# https://github.com/pypa/setuptools_scm#pyprojecttoml-usage
[tool.setuptools_scm]
write_to = "src/feedarchiver/version.py"
local_scheme = "no-local-version"

[tool.pylint.MASTER]
# Auto-detect the number of processors available to use from:
#     $ pylint --generate-rcfile
jobs = 0
ignore-paths = [
# Managed by tools, best to use `# pylint: disable=...` inline comments for any other
# ignores.
    "src/feedarchiver/version.py"
]
# Extend linting to usage of trusted extension packages
extension-pkg-allow-list = ["lxml"]
[tool.pylint.TYPECHECK]
# Ignore false negatives from external packages
ignored-classes = ["lxml.etree.QName.localname"]
